--- a/index.html
+++ b/index.html
@@ -13,38 +13,42 @@
 
 <body>
     <div class="container">
-        <nav id="navbar">
-            <div class="logo">
-                <a href="">
-                    <img src="./img/svg/logo.svg" alt="logo">
-                    <img src="./img/svg/logo-name.svg" alt="">
-                </a>
-            </div>
-            <ul class="menu">
-                <li><a href="index.html#pricing">Pricing</a></li>
-                <li><a href="index.html#detailed-view">Compare Plans</a></li>
-                <li><a href="index.html#features">Features</a></li>
-                <li class="list"><a href="#">Learn More</a>
-                    <ul class="extend">
-                        <li><a href="">Action</a></li>
-                        <li><a href="">Security</a></li>
-                        <li><a href="">Customers</a></li>
-                        <li><a href="">App Integration</a></li>
-                        <li><a href="">Solutions</a></li>
-                        <li><a href="">Events & Webinars</a></li>
-                        <li><a href="">FAQs</a></li>
-                    </ul>
-                </li>
-                <li class="list"><a href="#">Sales</a>
-                    <ul class="extend">
-                        <li><a href="">Action</a></li>
-                        <li><a href="">Another Action</a></li>
-                        <li><a href="">Still Thinking</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
-        <header id="land-page">
+        <header>
+            <nav id="navbar">
+                <div class="logo">
+                    <a href="">
+                        <img src="./img/svg/logo.svg" alt="logo">
+                        <img src="./img/svg/logo-name.svg" alt="">
+                    </a>
+                </div>
+                <ul class="menu">
+                    <li><a href="index.html#pricing">Pricing</a></li>
+                    <li><a href="index.html#detailed-view">Compare Plans</a></li>
+                    <li><a href="index.html#features">Features</a></li>
+                    <li class="list"><a href="#">Learn More</a>
+                        <ul class="extend">
+                            <li><a href="">Action</a></li>
+                            <li><a href="">Security</a></li>
+                            <li><a href="">Customers</a></li>
+                            <li><a href="">App Integration</a></li>
+                            <li><a href="">Solutions</a></li>
+                            <li><a href="">Events & Webinars</a></li>
+                            <li><a href="">FAQs</a></li>
+                        </ul>
+                    </li>
+                    <li class="list"><a href="#">Sales</a>
+                        <ul class="extend">
+                            <li><a href="">Action</a></li>
+                            <li><a href="">Another Action</a></li>
+                            <li><a href="">Still Thinking</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <span class="fa fa-bars fa-2x mobile-menu"></span>
+            </nav>
+        </header>
+
+        <section id="land-page">
             <div class="main-content">
                 <div class="intro">
                     <h1>Work better, more <br /> safely, together</h1>
@@ -54,11 +58,9 @@
                                 class="buy-button">purchase now</a></span> <br />
                         <span>No credit Card Needed!</span>
                     </div>
-
                 </div>
-
             </div>
-        </header>
+        </section>
 
         <section class="news">
             <p>
@@ -157,7 +159,7 @@
                                 <div>
                                     <div>
                                         <div class="icon">
-                                             <img src="img/icons/solutions.png" alt="solutions image">
+                                            <img src="img/icons/solutions.png" alt="solutions image">
                                         </div>
                                         <p>
                                             Customizable solutions
