fixed some design issues and tweaked the html

--- a/index.html
+++ b/index.html
@@ -312,9 +312,13 @@
                 <h3>Frequently Asked Questions</h3>
                 <div class="accordion">
                     <div class="accordionItem close">
-                        <h4 class="accordionHeading">
-                            What is the difference between Dropbox Business Standard and Dropbox Business Advanced?
-                        </h4>
+                        <div class="accordionHeading">
+                            <h4>
+                                What is the difference between Dropbox Business Standard and Dropbox Business Advanced?
+                            </h4>
+                            <span class="test"></span>
+                        </div>
+
                         <div class="accordionContent">
                             <p>Standard provides teams with 3 TB of storage and simple sharing and collaboration tools.
                                 For
@@ -331,9 +335,13 @@
                     </div>
 
                     <div class="accordionItem close">
-                        <h4 class="accordionHeading">
-                            How much space does my team get?
-                        </h4>
+                        <div class="accordionHeading">
+                            <h4>
+                                How much space does my team get?
+                            </h4>
+                            <span class="test"></span>
+                        </div>
+
                         <div class="accordionContent">
                             <p>
                                 Dropbox Business provides three plans to fit your team’s needs. The Standard plan gives
@@ -348,9 +356,14 @@
                     </div>
 
                     <div class="accordionItem close">
-                        <h4 class="accordionHeading">
-                            Can I upgrade my existing Dropbox Basic or Dropbox Plus account? How does migration work?
-                        </h4>
+                        <div class="accordionHeading">
+                            <h4>
+                                Can I upgrade my existing Dropbox Basic or Dropbox Plus account? How does migration
+                                work?
+                            </h4>
+                            <span class="test"></span>
+                        </div>
+
                         <div class="accordionContent">
                             <p>
                                 If you already use Dropbox, moving to a Dropbox Business account is easy! All your
@@ -359,16 +372,12 @@
                                 same — your files will stay where they are, and all your settings (like shared folder
                                 relationships and
                                 linked devices) will remain the same.
-                            </p>
-                            <p>
                                 For admins, all your team members who already use Dropbox
                                 will have
                                 that same experience, and anyone without an existing Dropbox account will be prompted to
-                                sign up
+                                up
                                 when you
                                 send them an invite.
-                            </p>
-                            <p>
                                 Dropbox Plus users who switch to Dropbox Business, any remaining
                                 credits will be
                                 returned as a pro-rated refund to the original payment method.
@@ -378,9 +387,13 @@
                     </div>
 
                     <div class="accordionItem close">
-                        <h4 class="accordionHeading">
-                            Do you have any discounts for Dropbox Business and Dropbox Enterprise?
-                        </h4>
+                        <div class="accordionHeading">
+                            <h4>
+                                Do you have any discounts for Dropbox Business and Dropbox Enterprise?
+                            </h4>
+                            <span class="test"></span>
+                        </div>
+
                         <div class="accordionContent">
                             <p>
                                 Yes! We have volume discounts as well as discounts for nonprofits and educational
