fixed the hamburger menu

--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
                         </ul>
                     </li>
                 </ul>
-                <span class="fa fa-bars fa-2x mobile-menu"></span>
+                <div class="mobile-menu">
+                    <div class="line line1"></div>
+                    <div class="line line2"></div>
+                    <div class="line line3"></div>
+                </div>
             </nav>
         </header>
 
