--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
                     </a>
                 </div>
                 <ul class="menu">
-                    <li><a href="index.html#pricing">Pricing</a></li>
-                    <li><a href="index.html#detailed-view">Compare Plans</a></li>
-                    <li><a href="index.html#features">Features</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#detailed-view">Compare Plans</a></li>
+                    <li><a href="#features">Features</a></li>
                     <li class="list"><a href="#">Learn More</a>
                         <ul class="extend">
-                            <li><a href="">Action</a></li>
-                            <li><a href="">Security</a></li>
-                            <li><a href="">Customers</a></li>
-                            <li><a href="">App Integration</a></li>
-                            <li><a href="">Solutions</a></li>
-                            <li><a href="">Events & Webinars</a></li>
-                            <li><a href="">FAQs</a></li>
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Security</a></li>
+                            <li><a href="#">Customers</a></li>
+                            <li><a href="#">App Integration</a></li>
+                            <li><a href="#">Solutions</a></li>
+                            <li><a href="#">Events & Webinars</a></li>
+                            <li><a href="#">FAQs</a></li>
                         </ul>
                     </li>
                     <li class="list"><a href="#">Sales</a>
                         <ul class="extend">
-                            <li><a href="">Action</a></li>
-                            <li><a href="">Another Action</a></li>
-                            <li><a href="">Still Thinking</a></li>
+                            <li><a href="#">Action</a></li>
+                            <li><a href="#">Another Action</a></li>
+                            <li><a href="#">Still Thinking</a></li>
                         </ul>
                     </li>
                 </ul>
